{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 102,
  "lineage": "312a5f49-2b9e-40b1-8223-c94c48998353",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "gateway_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.96.66.115",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-09-07T12:36:09.850-07:00",
            "description": "Static IP for APISIX gateway load balancer",
            "id": "projects/apicloak-dev/global/addresses/dev-gateway-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "dev-gateway-ip",
            "prefix_length": 0,
            "project": "apicloak-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/global/addresses/dev-gateway-ip"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_check",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "443",
                  "8080",
                  "9080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-07T12:36:37.361-07:00",
            "deny": [],
            "description": "Allow health checks from Google Cloud Load Balancer",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/apicloak-dev/global/firewalls/dev-allow-health-check",
            "log_config": [],
            "name": "dev-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/global/networks/dev-gateway-vpc",
            "priority": 1000,
            "project": "apicloak-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/global/firewalls/dev-allow-health-check",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.required_apis",
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-09-07T12:36:37.286-07:00",
            "deny": [],
            "description": "Allow internal communication within VPC",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/apicloak-dev/global/firewalls/dev-allow-internal",
            "log_config": [],
            "name": "dev-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/global/networks/dev-gateway-vpc",
            "priority": 1000,
            "project": "apicloak-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/global/firewalls/dev-allow-internal",
            "source_ranges": [
              "10.0.1.0/24",
              "10.1.0.0/16",
              "10.2.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.required_apis",
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-09-07T12:36:37.218-07:00",
            "deny": [],
            "description": "Allow SSH access for debugging",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/apicloak-dev/global/firewalls/dev-allow-ssh",
            "log_config": [],
            "name": "dev-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/global/networks/dev-gateway-vpc",
            "priority": 1000,
            "project": "apicloak-dev",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/global/firewalls/dev-allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.required_apis",
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "VPC network for dev gateway infrastructure",
            "enable_ula_internal_ipv6": false,
            "id": "projects/apicloak-dev/global/networks/dev-gateway-vpc",
            "mtu": 0,
            "name": "dev-gateway-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "183807273130287169",
            "project": "apicloak-dev",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/global/networks/dev-gateway-vpc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.required_apis"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2025-09-07T12:36:38.227-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/apicloak-dev/regions/us-central1/routers/dev-gateway-router",
            "name": "dev-gateway-router",
            "network": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/global/networks/dev-gateway-vpc",
            "project": "apicloak-dev",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/regions/us-central1/routers/dev-gateway-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.required_apis",
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "apicloak-dev/us-central1/dev-gateway-router/dev-gateway-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "dev-gateway-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "apicloak-dev",
            "region": "us-central1",
            "router": "dev-gateway-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.required_apis",
            "module.networking.google_compute_network.vpc",
            "module.networking.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "gke_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-09-07T12:36:38.293-07:00",
            "description": "Subnet for GKE cluster nodes",
            "gateway_address": "10.0.1.1",
            "id": "projects/apicloak-dev/regions/us-central1/subnetworks/dev-gke-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "dev-gke-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/global/networks/dev-gateway-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "apicloak-dev",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/16",
                "range_name": "pods-range"
              },
              {
                "ip_cidr_range": "10.2.0.0/16",
                "range_name": "services-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/apicloak-dev/regions/us-central1/subnetworks/dev-gke-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_project_service.required_apis",
            "module.networking.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}